Closed Bug 1736675 Opened 4 years ago Closed 4 years ago

Tooltips have wrong appearance after switching system dark mode on macOS

Categories

(Core :: Widget: Cocoa, defect)

defect

Tracking

()

VERIFIED FIXED
95 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox-esr91 --- unaffected
firefox93 --- unaffected
firefox94 --- verified
firefox95 --- verified

People

(Reporter: emilio, Assigned: emilio)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

I bet it's bug 1734716 what caused this.

Flags: needinfo?(emilio)

So that when the system changes appearance we respect that automatically.

Comment on attachment 9246708 [details]
Bug 1736675 - Make sure to only override color-scheme on widgets if the color-scheme property says so. r=mstange

Beta/Release Uplift Approval Request

  • User impact if declined: After switching system dark to light mode or vice versa, tooltips might have low contrast on macOS.
  • Is this code covered by automated tests?: Yes
  • Has the fix been verified in Nightly?: No
  • Needs manual test from QE?: Yes
  • If yes, steps to reproduce: * Open Nightly, hover over a tab and see that the tooltip has appropriate contrast.
  • Go to macOS settings and switch to dark mode.
  • Hover over the tab again. The tooltip text color is white but the background is light (and should be dark after the patch).
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Minor tweak to the regressing bug.
  • String changes made/needed: none
Flags: needinfo?(emilio)
Attachment #9246708 - Flags: approval-mozilla-beta?
Flags: qe-verify+
Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/a74707755934 Make sure to only override color-scheme on widgets if the color-scheme property says so. r=mstange

Related issue that may be solved by this bug:

On a fresh Nightly on MacOS, when going to about:addons > Themes and enabling Dark theme or any of the bold colorways, the tooltips look white-on-light gray. It fixes itself after Firefox restart, but then I can get the inverse problem of black-on-dark gray tooltips when enabling a light theme.

Yeah that's the same bug.

Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 95 Branch
QA Whiteboard: [qa-triaged]

Set release status flags based on info from the regressing bug 1734716

Reproduced the issue with Firefox 95.0a1 (20211017213754) on macOS 10.15 and STR from comment 2.
The issue is verified fixed with Firefox 95.0a1 (20211020093007 ) on macOS 10.15. The tooltips are correctly displayed after switching from Light to Dark theme and vice versa inside macOS settings.

Comment on attachment 9246708 [details]
Bug 1736675 - Make sure to only override color-scheme on widgets if the color-scheme property says so. r=mstange

Approved for 94.0b9 to avoid shipping a new high-visibility regression to users.

Attachment #9246708 - Flags: approval-mozilla-beta? → approval-mozilla-beta+

The issue is no longer reproducing with Firefox 94.0b9 (20211021185848) on macOS 11 ARM and 10.15. Tooltips are correctly displayed after switching from Light to Dark theme and vice versa inside macOS settings.

Status: RESOLVED → VERIFIED
Flags: qe-verify+
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: