Bug 1736675 - Make sure to only override color-scheme on widgets if the color-scheme property says so. r=mstange, a=RyanVM

So that when the system changes appearance we respect that automatically.

Differential Revision: https://phabricator.services.mozilla.com/D128924